--- a/API/.env
+++ b/API/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://mrohan51068:rmV9f2mW9RkMoLi7@cluster0.kholqdv.mongodb.net/
+MONGODB_URI=mongodb+srv://mrohan51068:UhVpuOSV6E7FFTTq@cluster0.c8fpnnd.mongodb.net/
 DB_NAME=F_p
